--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,3 +1,25 @@
-<p>
-  settings works!
-</p>
+<ion-fab>
+  <ion-fab-button size="small" id="open-modal" expand="block">
+    <ion-icon name="settings-sharp"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
+  <ion-modal #modal trigger="open-modal">
+    <ng-template>
+      <ion-content>
+        <div id="container">
+        <ion-toolbar>
+          <ion-title>Settigns</ion-title>
+        </ion-toolbar>
+        <ion-label >
+          <ion-checkbox>Música</ion-checkbox>
+      </ion-label>
+      <ion-label>
+        <ion-checkbox>Som</ion-checkbox>
+      </ion-label>
+        <ion-button>Recomecar</ion-button>          
+        <ion-button>Sair</ion-button>          
+        <ion-button (click)="modal.dismiss()">OK</ion-button>
+      </div>          
+      </ion-content>
+    </ng-template>
+  </ion-modal>
