tela inicial feita

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,6 +16,6 @@
   </div>
 
   <div id="container" class="buttons">
-    <ion-button class="playBtn"></ion-button>
+    <ion-button routerLink="/worlds" class="playBtn"></ion-button>
   </div>
 </ion-content>
