--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -93,7 +93,7 @@ ion-img {
   left: 5px;
   width: 90%;
   height: 90%;
-  background-image: url('../../assets/mainMenuAssets/design/');
+  background-image: url('../../assets/mainMenuAssets/design/lampada2.png');
   background-size: cover;
   background-position: center center;
   filter: brightness(100);
