--- a/src/app/worlds/worlds.page.html
+++ b/src/app/worlds/worlds.page.html
@@ -5,7 +5,7 @@
     <line x1="30%" y1="47%" x2="84%" y2="33%" stroke="white" stroke-width="8" stroke-dasharray="14" />
     <line x1="78%" y1="34%"x2="25%" y2="20%" stroke="white" stroke-width="8" stroke-dasharray="14" />
 
-    <a routerLink="/level-selection"><image x="13%" y="75%" xlink:href="../../assets/Planets/Earth.png" id="earth" /></a>
+    <a href="../level-selection/"><image x="13%" y="75%" xlink:href="../../assets/Planets/Earth.png" id="earth" /></a>
     <image x="70%" y="60%" xlink:href="../../assets/Planets/Moon.png" id="moon" />
     <image x="13%" y="45%" xlink:href="../../assets/Planets/Ice.png" id="freeze" />
     <image x="70%" y="30%" xlink:href="../../assets/Planets/Lava.png" id="vulkan" />
