--- a/src/app/prehistoric-scenery/prehistoric-scenery.page.html
+++ b/src/app/prehistoric-scenery/prehistoric-scenery.page.html
@@ -1,13 +1,2 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>prehistoric-scenery</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">prehistoric-scenery</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 </ion-content>
