--- a/src/app/choices/choices.component.html
+++ b/src/app/choices/choices.component.html
@@ -1,6 +1,7 @@
+<ion-card>{{pergunta}}</ion-card>
 <div>
-  <ion-button>Hello</ion-button>
-  <ion-button>Hello</ion-button>
-  <ion-button>Hello</ion-button>
-  <ion-button>Hello</ion-button>
+  <ion-button>{{escolha1}}</ion-button>
+  <ion-button>{{escolha2}}</ion-button>
+  <ion-button>{{escolha3}}</ion-button>
+  <ion-button>{{escolha4}}</ion-button>
 </div>
