--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,4 +18,11 @@
   <div id="container" class="buttons">
     <ion-button routerLink="/worlds" class="playBtn"></ion-button>
   </div>
+  <app-choices
+  [escolha1]="'1'"
+  [escolha2]="'2'"
+  [escolha3]="'3'"
+  [escolha4]="'4'"
+  [pergunta]="'Qual o número primo?'"
+  ></app-choices>
 </ion-content>
