--- a/src/app/choices/choices.component.scss
+++ b/src/app/choices/choices.component.scss
@@ -13,4 +13,16 @@ div{
     align-items: center;
     }
 }
+
+ion-card{
+    position: absolute;
+    top: 60vh;
+    --background: center / 95% 100% no-repeat url("../../assets/settignsAssets/BTN-EMPTY2.png");
+    height: 5em;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
     
