--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,6 +23,17 @@
   [escolha2]="'2'"
   [escolha3]="'3'"
   [escolha4]="'4'"
-  [pergunta]="'Qual o número primo?'"
+  [pergunta]="'Qual é o número primo?'"
+  [respostaCorreta]="'B'"
+  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
+  ></app-choices>
+  <app-choices
+  [escolha1]="'JK'"
+  [escolha2]="'Getulio'"
+  [escolha3]="'Bolsonaro'"
+  [escolha4]="'Lula'"
+  [pergunta]="'Qual é o nome do presidente do Brasil?'"
+  [respostaCorreta]="'D'"
+  [explicacao]="'Porque Lula foi eleito na última eleição de 2022 no Brasil'"
   ></app-choices>
 </ion-content>
