--- a/src/app/choices/choices.component.html
+++ b/src/app/choices/choices.component.html
@@ -4,4 +4,6 @@
   <ion-button (click)="checkTheValue('B')">{{ escolha2 }}</ion-button>
   <ion-button (click)="checkTheValue('C')">{{ escolha3 }}</ion-button>
   <ion-button (click)="checkTheValue('D')">{{ escolha4 }}</ion-button>
+  <div #resultContainer></div>
 </div>
+
