create component book

--- a/src/app/choices/choices.component.html
+++ b/src/app/choices/choices.component.html
@@ -1,9 +1,10 @@
+<ng-container #resultContainer></ng-container>
+
 <ion-card *ngIf="exibirComponente">{{ pergunta }}</ion-card>
 <div *ngIf="exibirComponente">
   <ion-button (click)="checkTheValue('A')">{{ escolha1 }}</ion-button>
   <ion-button (click)="checkTheValue('B')">{{ escolha2 }}</ion-button>
   <ion-button (click)="checkTheValue('C')">{{ escolha3 }}</ion-button>
   <ion-button (click)="checkTheValue('D')">{{ escolha4 }}</ion-button>
-  <div #resultContainer></div>
 </div>
 
