--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="exibirComponente">
+<div *ngIf="exibirComponente" id="container">
   <ion-img src="{{image}}"></ion-img>
   <p>{{message}}</p>
 </div>
