--- a/src/app/moon-scenery/moon-scenery.page.html
+++ b/src/app/moon-scenery/moon-scenery.page.html
@@ -1,2 +1,20 @@
 <ion-content>
+    <app-choices
+  [escolha1]="'1'"
+  [escolha2]="'2'"
+  [escolha3]="'3'"
+  [escolha4]="'4'"
+  [pergunta]="'Qual é o número primo?'"
+  [respostaCorreta]="'B'"
+  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
+  ></app-choices>
+<!--   <app-choices
+  [escolha1]="'JK'"
+  [escolha2]="'Getulio'"
+  [escolha3]="'Bolsonaro'"
+  [escolha4]="'Lula'"
+  [pergunta]="'Qual é o nome do presidente do Brasil?'"
+  [respostaCorreta]="'D'"
+  [explicacao]="'Porque Lula foi eleito na última eleição de 2022 no Brasil'"
+  ></app-choices> -->
 </ion-content>
