--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-img
         id='title'
         src="../../assets/mainMenuAssets/design/educationalTitle.png"
-        alt="Lampada em 3D">
+        alt="Título Educational Game">
       </ion-img>
       <ion-img
         id="lamp"
