--- a/src/app/moon-scenery/moon-scenery.page.scss
+++ b/src/app/moon-scenery/moon-scenery.page.scss
@@ -1,6 +1,6 @@
-ion-content::part(background){
-    background-image: url('../../assets/scenerys/CenarioLua.jpg');
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
-  }
+// ion-content::part(background){
+//     background-image: url('../../assets/scenerys/CenarioLua.jpg');
+//     background-size: cover;
+//     width: 100vw;
+//     height: 100vh;
+//   }
