--- a/src/app/result/result.component.scss
+++ b/src/app/result/result.component.scss
@@ -1,5 +1,17 @@
+  *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
   
   #container{
-    width: 100vw;
-    height: 10vh;
+    display: flex;
+    align-items: center; 
+    height: 16vh;
+    background-image: url("../../assets/Reactions/dialogue_box.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    ion-img{
+      width: 70%;
+    }
 }
