--- a/src/app/middle-age-scenery/middle-age-scenery.page.html
+++ b/src/app/middle-age-scenery/middle-age-scenery.page.html
@@ -1,4 +1,16 @@
 <ion-content>
     <canvas id="gameCanvas"></canvas>
+
+    <ion-content>
+        <div id="container">
+          <ion-toolbar>
+            <ion-title>Settings</ion-title>
+          </ion-toolbar>
+          <ion-label>
+            <ion-checkbox (ionChange)="toggleMusic($event)" [checked]="isMusicPlaying">Música</ion-checkbox>
+          </ion-label>
+        </div>
+      </ion-content>
+      
 </ion-content>
 
