--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,4 +1,9 @@
 <div *ngIf="exibirComponente" id="container">
-    <p>{{ message }}</p>
-    <ion-img src="{{ image }}"></ion-img>
+    <div id="dialogue-box">
+        <p>{{ message }}</p>
+    </div>
+    <div id="person-box">
+        <ion-img src="{{ image }}"></ion-img>
+        <ion-img src="../../assets/Reactions/Right.png"></ion-img>
+    </div>
 </div>
