Component Choices Finalizado

--- a/src/app/middle-age-scenery/middle-age-scenery.page.html
+++ b/src/app/middle-age-scenery/middle-age-scenery.page.html
@@ -7,8 +7,8 @@
             <ion-title>Settings</ion-title>
           </ion-toolbar>
           <ion-label>
-<!--             <ion-checkbox (ionChange)="toggleMusic($event)" [checked]="isMusicPlaying">Música</ion-checkbox>
- -->          </ion-label>
+            <ion-checkbox (ionChange)="toggleMusic($event)" [checked]="isMusicPlaying">Música</ion-checkbox>
+          </ion-label>
         </div>
       </ion-content>
       
