component choices finalizado

--- a/src/app/choices/choices.component.scss
+++ b/src/app/choices/choices.component.scss
@@ -1,3 +1,8 @@
+*{
+    font-family: Poppins,'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+}
+
 div{
     width: 100vw;
     position: absolute;
