--- a/src/app/pages/moon-scenery/moon-scenery.page.html
+++ b/src/app/pages/moon-scenery/moon-scenery.page.html
@@ -8,6 +8,7 @@
   [respostaCorreta]="'B'"
   [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
   ></app-choices>
+  <app-book></app-book>
 <!--   <app-choices
   [escolha1]="'JK'"
   [escolha2]="'Getulio'"
