--- a/src/app/pages/moon-scenery/moon-scenery.page.html
+++ b/src/app/pages/moon-scenery/moon-scenery.page.html
@@ -1,4 +1,5 @@
 <ion-content>
+  
     <app-choices
   [escolha1]="'1'"
   [escolha2]="'2'"
@@ -7,15 +8,28 @@
   [pergunta]="'Qual é o número primo?'"
   [respostaCorreta]="'B'"
   [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
-  ></app-choices>
+    ></app-choices>
   <app-book></app-book>
-<!--   <app-choices
-  [escolha1]="'JK'"
-  [escolha2]="'Getulio'"
-  [escolha3]="'Bolsonaro'"
-  [escolha4]="'Lula'"
-  [pergunta]="'Qual é o nome do presidente do Brasil?'"
-  [respostaCorreta]="'D'"
-  [explicacao]="'Porque Lula foi eleito na última eleição de 2022 no Brasil'"
+  <app-settings></app-settings>
+  <!-- <app-choices
+  [escolha1]="'Moon'"
+  [escolha2]="'Sun'"
+  [escolha3]="'Marth'"
+  [escolha4]="'Earth'"
+  [pergunta]="'Qual é o nome da lua em inglês?'"
+  [respostaCorreta]="'A'"
+  [explicacao]="'moon significa lua.'"
+  ></app-choices>
+  <app-choices
+  [escolha1]="'Moon'"
+  [escolha2]="'Solar'"
+  [escolha3]="'Sun'"
+  [escolha4]="'Earth'"
+  [pergunta]="'Qual é a forma correta de falar sol em inglês ?'"
+  [respostaCorreta]="'C'"
+  [explicacao]="'sun significa sol.'"
   ></app-choices> -->
 </ion-content>
+
+
+
