Mudança no component Settings

--- a/src/app/component/book/book.component.html
+++ b/src/app/component/book/book.component.html
@@ -1,6 +1,6 @@
   <ion-button id="background-icon"></ion-button>
-  <ion-img id="open-modal" src="../../../assets/possiveis imgs/book-icon.png"></ion-img>
-  <ion-modal #modal trigger="open-modal">
+  <ion-img id="open-book-modal" src="../../../assets/possiveis imgs/book-icon.png"></ion-img>
+  <ion-modal #modal trigger="open-book-modal">
     <ng-template>
       <ion-content>
         <div id="container">
