--- a/src/app/pages/worlds/worlds.page.html
+++ b/src/app/pages/worlds/worlds.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <svg class="game-container">
+<!--   <svg class="game-container">
     <line x1="22%" y1="80%" x2="72%" y2="66%" stroke="white" stroke-width="8" stroke-dasharray="14" />
     <line x1="78%" y1="64%"x2="19%" y2="47%" stroke="white" stroke-width="8" stroke-dasharray="14" />
     <line x1="30%" y1="47%" x2="84%" y2="33%" stroke="white" stroke-width="8" stroke-dasharray="14" />
@@ -10,6 +10,7 @@
     <image x="13%" y="45%" xlink:href="../../../assets/Planets/Ice.png" id="freeze" />
     <image x="70%" y="30%" xlink:href="../../../assets/Planets/Lava.png" id="vulkan" />
     <image x="13%" y="15%" xlink:href="../../../assets/Planets/Black_hole.png" id="black_hole" />
-  </svg>
+  </svg> -->
   <app-settings></app-settings>
+  <ion-img src="../../../assets/Planets/Earth.png" routerLink="/level-selection" id="earth"></ion-img>
 </ion-content>
