--- a/src/app/component/book/book.component.scss
+++ b/src/app/component/book/book.component.scss
@@ -24,7 +24,7 @@ ion-img{
     left: 70vw;
     height: 12vh;
     width: 30vw;
-    animation: movingUp 1s infinite alternate;
+    animation: shake 1s infinite alternate;
 }
 @keyframes shine{
   0% {
@@ -35,12 +35,13 @@ ion-img{
   }
 }
 
-@keyframes movingUp {
-  0% {
-    transform: translateY(0);
+@keyframes shake {
+  
+  0%{
+    transform: rotate(-10deg);
   }
   100% {
-    transform: translateY(-4px);
+    transform: rotate(10deg);
   }
 }
 
@@ -76,7 +77,7 @@ ion-modal {
     --height: 36vh;
     --width: 85vw;
     --border-radius: 16px;
-    --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); 
+    --box-shadow:0; 
   
   }
   
