--- a/src/app/component/settings/settings.component.html
+++ b/src/app/component/settings/settings.component.html
@@ -1,9 +1,5 @@
-<ion-fab>
-  <ion-fab-button size="small" id="open-modal" expand="block">
-    <ion-icon name="settings-sharp"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
-  <ion-modal #modal trigger="open-modal">
+  <ion-fab-button size="small" id="settings-modal" expand="block"></ion-fab-button>
+  <ion-modal #modal trigger="settings-modal">
     <ng-template>
       <ion-content>
         <div id="container">
@@ -11,14 +7,14 @@
           <ion-title>Settings</ion-title>
         </ion-toolbar>
         <ion-label >
-          <ion-checkbox (ionChange)="toggleMusic($event)">Música</ion-checkbox>
+          <ion-button id="sound-button" (ionChange)="toggleMusic($event)"></ion-button>
+          <ion-button id="music-button" (ionChange)="toggleMusic($event)"></ion-button>
       </ion-label>
       <ion-label>
-        <ion-checkbox>Som</ion-checkbox>
+        <ion-button routerLink="/level-selection" id="home-button"></ion-button>          
+        <ion-button id="play-button" (click)="modal.dismiss()"></ion-button>          
+        <ion-button id="reset-button" (click)="refreshPage()"></ion-button>
       </ion-label>
-        <ion-button>Recomecar</ion-button>          
-        <ion-button>Sair</ion-button>          
-        <ion-button (click)="modal.dismiss()">OK</ion-button>
       </div>          
       </ion-content>
     </ng-template>
