--- a/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
+++ b/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
@@ -11,6 +11,7 @@
           </ion-label>
         </div>
       </ion-content> -->
-      
+  <app-book></app-book>
+  <app-settings></app-settings>
 </ion-content>
 
