--- a/src/app/pages/level-selection/level-selection.page.html
+++ b/src/app/pages/level-selection/level-selection.page.html
@@ -1,40 +1,58 @@
-<ion-content class="ion-padding">
-  <div class="level-container">
-    <ion-card  routerLink="/middle-age-scenery" class="level-card">
-      <img src="../../../assets/medieval.png" alt="Level 1" class="level-image">
-      <ion-card-content>
-        <ion-card-title>Vera Cruz</ion-card-title>
-        <p class="level-description">Na Terra antiga de Vera Cruz, Um dragão Sequestrou a princesa. Precisamos de um heroi!</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-card routerLink="/prehistoric-scenery" class="level-card">
-      <img src="../../../assets/Dino.png" alt="Level 2" class="level-image">
-      <ion-card-content>
-        <ion-card-title>Paleo Pines</ion-card-title>
-        <p class="level-description">Em uma época antiga, uma tribo de homens das cavernas fez uma descoberta surpreendente - o fogo! Mas os dinossauros também!</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-card routerLink="/pirates-scenery" class="level-card">
-      <img src="../../../assets/Monkey.png" alt="Level 3" class="level-image">
-      <ion-card-content>
-        <ion-card-title>Monkey Island</ion-card-title>
-        <p class="level-description">Em uma ilha remota, uma trupe de piratas desencadeou uma maldição ao encontrar um tesouro.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-card routerLink="/moon-scenery" class="level-card">
-      <img src="../../../assets/Moon.png" alt="Level 4" class="level-image">
-      <ion-card-content>
-        <ion-card-title>Tacoma</ion-card-title>
-        <p class="level-description">Em uma missão na lua, um foguete e sua tripulação enfrentam um problema grave: um dos tripulantes é um impostor disfarçado.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-card routerLink="/old-west-scenery" class="level-card">
-      <img src="../../../assets/cowboy - Copia1.png" alt="Level 5" class="level-image">
-      <ion-card-content>
-        <ion-card-title>Juarez</ion-card-title>
-        <p class="level-description">um lendário cowboy precisa enfrentar um duelo mortal. Há apenas um problema: sua arma está quebrada!</p>
-      </ion-card-content>
-    </ion-card>
-  </div>
-  <app-settings></app-settings>
-</ion-content>
+<ion-header>
+</ion-header>
+
+<ion-content>
+  <swiper-container class="level-container">
+      <swiper-slide>
+        <ion-card routerLink="/moon-scenery" class="level-card">
+          <img src="assets/him.jpg" alt="Level 4" class="level-image">
+          <ion-card-content>
+            <ion-card-title>Tacoma</ion-card-title>
+            <p class="level-description">Em uma missão na lua, um foguete e sua tripulação enfrentam um problema grave: um dos tripulantes é um impostor disfarçado.</p>
+          </ion-card-content>
+        </ion-card>
+      </swiper-slide>
+
+      <swiper-slide>
+        <ion-card  routerLink="/middle-age-scenery" class="level-card">
+          <img src="assets/hallway.png" alt="Level 1" class="level-image">
+          <ion-card-content>
+            <ion-card-title>Vera Cruz</ion-card-title>
+            <p class="level-description">Na Terra antiga de Vera Cruz, Um dragão Sequestrou a princesa. Precisamos de um heroi!</p>
+          </ion-card-content>
+        </ion-card>
+      </swiper-slide>
+
+      <swiper-slide>
+        <ion-card routerLink="/prehistoric-scenery" class="level-card">
+          <img src="assets/valley.png" alt="Level 2" class="level-image">
+          <ion-card-content>
+            <ion-card-title>Paleo Pines</ion-card-title>
+            <p class="level-description">Em uma época antiga, uma tribo de homens das cavernas fez uma descoberta surpreendente - o fogo! Mas os dinossauros também!</p>
+          </ion-card-content>
+        </ion-card>
+      </swiper-slide>
+
+      <swiper-slide>
+        <ion-card routerLink="/pirates-scenery" class="level-card">
+          <img src="assets/insland.png" alt="Level 3" class="level-image">
+          <ion-card-content>
+            <ion-card-title>Monkey Island</ion-card-title>
+            <p class="level-description">Em uma ilha remota, uma trupe de piratas desencadeou uma maldição ao encontrar um tesouro.</p>
+          </ion-card-content>
+        </ion-card>
+      </swiper-slide>
+
+      <swiper-slide>
+        <ion-card routerLink="/old-west-scenery" class="level-card">
+          <img src="assets/cowboy.png" alt="Level 5" class="level-image">
+          <ion-card-content>
+            <ion-card-title>Juarez</ion-card-title>
+            <p class="level-description">um lendário cowboy precisa enfrentar um duelo mortal. Há apenas um problema: sua arma está quebrada!</p>
+          </ion-card-content>
+        </ion-card>
+      </swiper-slide>
+      </swiper-container>
+
+    </ion-content>
+    
