--- a/src/app/pages/level-selection/level-selection.page.scss
+++ b/src/app/pages/level-selection/level-selection.page.scss
@@ -1,13 +1,11 @@
-.level-container  {
-    background-image: url('../../../assets/void.png');
-    background-size: cover; /* Ajuste o tamanho da imagem conforme necessário */
-    background-repeat: no-repeat;
-  }
-.header-title {
-    font-size: 24px;
-  }
-  
-  .level-container {
+ion-content::part(background){
+  background-image: url('../../../assets/dark.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
+}
+    .level-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -28,4 +26,29 @@
   }
 
 
+
+  swiper-slide {
+    display: flex;
+    position: relative;
   
+    flex-direction: column;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+  
+    width: 100%;
+    height: 100%;
+  
+    font-size: 18px;
+  
+    text-align: center;
+    box-sizing: border-box;
+  }
+  
+
+  swiper-slide img {
+  width: 65vh;
+  max-width: 100%;
+  height: 42vh;
+  max-height: 100%;
+}
