Component de Fala

--- a/src/app/pages/moon-scenery/moon-scenery.page.html
+++ b/src/app/pages/moon-scenery/moon-scenery.page.html
@@ -11,6 +11,14 @@
     ></app-choices>
   <app-book></app-book>
   <app-settings></app-settings>
+  <app-interaction
+  [message]="'Tchau mundo'"
+  [image]="'../../../assets/reactions/Wrong.png'"
+  ></app-interaction>
+  <app-interaction
+  [message]="'Olá mundo'"
+  [image]="'../../../assets/reactions/Right.png'"
+  ></app-interaction>
   <!-- <app-choices
   [escolha1]="'Moon'"
   [escolha2]="'Sun'"
