--- a/src/app/component/settings/settings.component.html
+++ b/src/app/component/settings/settings.component.html
@@ -6,9 +6,12 @@
         <ion-toolbar>
           <ion-title>Settings</ion-title>
         </ion-toolbar>
-        <ion-label >
+        <ion-label>
           <ion-button id="sound-button" (click)="toggleMusic()">
-            {{ isMusicPlaying ? 'Pausar Música' : 'Retomar Música' }}
+            <!-- {{ isMusicPlaying ? 'Pausar Música' : 'Retomar Música' }} -->
+          </ion-button>
+          <ion-button id="music-button" (click)="toggleMusic()">
+            <!-- {{ isMusicPlaying ? 'Pausar Música' : 'Retomar Música' }} -->
           </ion-button>
       </ion-label>
       <ion-label>
