--- a/src/app/component/settings/settings.component.html
+++ b/src/app/component/settings/settings.component.html
@@ -7,11 +7,9 @@
           <ion-title>Settings</ion-title>
         </ion-toolbar>
         <ion-label>
-          <ion-button id="sound-button" (click)="toggleMusic()">
-            <!-- {{ isMusicPlaying ? 'Pausar Música' : 'Retomar Música' }} -->
+          <ion-button id="sound-button" >
           </ion-button>
           <ion-button id="music-button" (click)="toggleMusic()">
-            <!-- {{ isMusicPlaying ? 'Pausar Música' : 'Retomar Música' }} -->
           </ion-button>
       </ion-label>
       <ion-label>
