Component Interaction terminado

--- a/src/app/component/interaction/interaction.component.html
+++ b/src/app/component/interaction/interaction.component.html
@@ -1,4 +1,4 @@
-<div id="container">
+<div id="container" [style.display]="exibirComponente ? 'flex' : 'none'" (click)="closeComponent()">
   <div id="dialogue-box">
       <p>{{ message }}</p>
   </div>
