--- a/src/app/pages/moon-scenery/moon-scenery.page.html
+++ b/src/app/pages/moon-scenery/moon-scenery.page.html
@@ -1,5 +1,4 @@
 <ion-content>
-  
     <app-choices
   [escolha1]="'1'"
   [escolha2]="'2'"
@@ -13,11 +12,19 @@
   <app-settings></app-settings>
   <app-interaction
   [message]="'Tchau mundo'"
-  [image]="'../../../assets/reactions/Wrong.png'"
+  [image]="'../../../assets/Reactions/interaction1.png'"
   ></app-interaction>
   <app-interaction
   [message]="'Olá mundo'"
-  [image]="'../../../assets/reactions/Right.png'"
+  [image]="'../../../assets/Reactions/interaction2.png'"
+  ></app-interaction>
+  <app-interaction
+  [message]="'Tchau mundo'"
+  [image]="'../../../assets/Reactions/interaction3.png'"
+  ></app-interaction>
+  <app-interaction
+  [message]="'Olá mundo'"
+  [image]="'../../../assets/Reactions/interaction4.png'"
   ></app-interaction>
   <!-- <app-choices
   [escolha1]="'Moon'"
