--- a/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
+++ b/src/app/pages/middle-age-scenery/middle-age-scenery.page.html
@@ -9,6 +9,8 @@
           </ion-label>
         </div>
       </ion-content> -->
+      <button (click)="showInteraction()">Mostrar Interação</button>
+      <button (click)="showChoices()">Mostrar perguntas</button>
   <app-book></app-book>
   <app-settings></app-settings>
 </ion-content>
