bug do component settigns resolvido

--- a/src/app/component/settings/settings.component.html
+++ b/src/app/component/settings/settings.component.html
@@ -13,7 +13,7 @@
           </ion-button>
       </ion-label>
       <ion-label>
-        <ion-button routerLink="/level-selection" id="home-button"></ion-button>          
+        <ion-button href="/level-selection" id="home-button"></ion-button>          
         <ion-button id="play-button" (click)="modal.dismiss()"></ion-button>          
         <ion-button id="reset-button" (click)="refreshPage()"></ion-button>
       </ion-label>
