--- a/src/app/pages/level-selection/level-selection.page.html
+++ b/src/app/pages/level-selection/level-selection.page.html
@@ -4,7 +4,7 @@
 <ion-content>
   <swiper-container class="level-container">
       <swiper-slide>
-        <ion-card routerLink="/moon-scenery" class="level-card">
+        <ion-card href="/moon-scenery" class="level-card">
           <img src="assets/him.jpg" alt="Level 4" class="level-image">
           <ion-card-content>
             <ion-card-title>Tacoma</ion-card-title>
@@ -14,7 +14,7 @@
       </swiper-slide>
 
       <swiper-slide>
-        <ion-card  routerLink="/middle-age-scenery" class="level-card">
+        <ion-card  href="/middle-age-scenery" class="level-card">
           <img src="assets/hallway.png" alt="Level 1" class="level-image">
           <ion-card-content>
             <ion-card-title>Vera Cruz</ion-card-title>
@@ -24,7 +24,7 @@
       </swiper-slide>
 
       <swiper-slide>
-        <ion-card routerLink="/prehistoric-scenery" class="level-card">
+        <ion-card href="/prehistoric-scenery" class="level-card">
           <img src="assets/valley.png" alt="Level 2" class="level-image">
           <ion-card-content>
             <ion-card-title>Paleo Pines</ion-card-title>
@@ -34,7 +34,7 @@
       </swiper-slide>
 
       <swiper-slide>
-        <ion-card routerLink="/pirates-scenery" class="level-card">
+        <ion-card href="/pirates-scenery" class="level-card">
           <img src="assets/insland.png" alt="Level 3" class="level-image">
           <ion-card-content>
             <ion-card-title>Monkey Island</ion-card-title>
@@ -44,7 +44,7 @@
       </swiper-slide>
 
       <swiper-slide>
-        <ion-card routerLink="/old-west-scenery" class="level-card">
+        <ion-card href="/old-west-scenery" class="level-card">
           <img src="assets/cowboy.png" alt="Level 5" class="level-image">
           <ion-card-content>
             <ion-card-title>Juarez</ion-card-title>
