--- a/src/app/pages/level-selection/level-selection.page.scss
+++ b/src/app/pages/level-selection/level-selection.page.scss
@@ -5,12 +5,6 @@ ion-content::part(background){
   width: 100vw;
   height: 100vh;
 }
-    .level-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
-  }
   
   .level-card {
     max-width: 300px;
@@ -30,17 +24,13 @@ ion-content::part(background){
   swiper-slide {
     display: flex;
     position: relative;
-  
     flex-direction: column;
     flex-shrink: 0;
     align-items: center;
     justify-content: center;
-  
-    width: 100%;
-    height: 100%;
-  
+    width: 100vw;
+    height: 100vh;
     font-size: 18px;
-  
     text-align: center;
     box-sizing: border-box;
   }
