Finalizado component Settigns, e correção de bugs no mesmo

--- a/src/app/component/book/book.component.html
+++ b/src/app/component/book/book.component.html
@@ -6,15 +6,23 @@
         <div id="container">
           <div>
           <ion-toolbar>
-            <ion-title>Rules</ion-title>
+            <ion-title>Help</ion-title>
           </ion-toolbar>    
-          <p>Welcome to my channel</p>
+          <p>Sun</p>
+          <p>Moon</p>
+          <p></p>
+          <p></p>
+          <p></p>
         </div>
         <div>
           <ion-toolbar>
-            <ion-title>Help</ion-title>
+            <ion-title>Ajuda</ion-title>
           </ion-toolbar>
-          <p>Today we will learn C#</p>
+          <p>Sol</p>
+          <p>Lua</p>
+          <p></p>
+          <p></p>
+          <p></p>
         </div>
 <!--         <ion-button (click)="modal.dismiss()"></ion-button>
  -->      </div>          
