--- a/src/app/component/book/book.component.scss
+++ b/src/app/component/book/book.component.scss
@@ -66,8 +66,9 @@ ion-img{
       width:46%;
       height: auto;
       p{
-        font-size: small;
+        font-size: medium;
         padding: 0 2em;
+        text-align: center;
       }
     }
   }
