Correção de bugs

--- a/src/app/component/book/book.component.html
+++ b/src/app/component/book/book.component.html
@@ -24,8 +24,7 @@
           <p></p>
           <p></p>
         </div>
-<!--         <ion-button (click)="modal.dismiss()"></ion-button>
- -->      </div>          
+     </div>          
       </ion-content>
     </ng-template>
   </ion-modal>
