--- a/src/app/pages/level-selection/level-selection.page.html
+++ b/src/app/pages/level-selection/level-selection.page.html
@@ -1,6 +1,3 @@
-<ion-header>
-</ion-header>
-
 <ion-content>
   <swiper-container class="level-container">
       <swiper-slide>
@@ -52,7 +49,7 @@
           </ion-card-content>
         </ion-card>
       </swiper-slide>
-      </swiper-container>
-
-    </ion-content>
+    </swiper-container>
+  </ion-content>
+  <app-settings></app-settings>
     
