--- a/src/app/pages/worlds/worlds.page.html
+++ b/src/app/pages/worlds/worlds.page.html
@@ -1,4 +1,7 @@
 <ion-content>
   <app-settings></app-settings>
-  <ion-img src="../../../assets/Planets/Earth.png" routerLink="/level-selection" id="earth"></ion-img>
+  <ion-alert></ion-alert>
+  <ion-button href="/level-selection" id="earth">
+    <ion-img src="../../../assets/Planets/Earth.png" ></ion-img>
+  </ion-button>
 </ion-content>
