ajustes nas páginas

--- a/src/app/component/book/book.component.html
+++ b/src/app/component/book/book.component.html
@@ -1,13 +1,16 @@
-  <ion-button id="background-icon"></ion-button>
-  <ion-img id="open-book-modal" src="../../../assets/possiveis imgs/book-icon.png"></ion-img>
-  <ion-modal #modal trigger="open-book-modal">
-    <ng-template>
-      <ion-content>
-        <div id="container">
-          <div>
+<ion-button id="background-icon"></ion-button>
+<ion-img
+  id="open-book-modal"
+  src="../../../assets/possiveis imgs/book-icon.png"
+></ion-img>
+<ion-modal #modal trigger="open-book-modal">
+  <ng-template>
+    <ion-content>
+      <div id="container">
+        <div>
           <ion-toolbar>
             <ion-title>Help</ion-title>
-          </ion-toolbar>    
+          </ion-toolbar>
           <p>Sun</p>
           <p>Moon</p>
           <p></p>
@@ -24,7 +27,7 @@
           <p></p>
           <p></p>
         </div>
-     </div>          
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+      </div>
+    </ion-content>
+  </ng-template>
+</ion-modal>
