--- a/src/app/pages/worlds/worlds.page.html
+++ b/src/app/pages/worlds/worlds.page.html
@@ -1,7 +1,41 @@
 <ion-content>
   <app-settings></app-settings>
-  <ion-alert></ion-alert>
+  <ion-button id="alert1">
+    <ion-alert
+      trigger="alert1"
+      message="Essa fase ainda está em desenvolvimento.
+           Click no planeta Terra."
+    ></ion-alert>
+  </ion-button>
+  <ion-button id="alert2">
+    <ion-alert
+      trigger="alert2"
+      message="Essa fase ainda está em desenvolvimento.
+           Click no planeta Terra."
+    ></ion-alert>
+  </ion-button>
+  <ion-button id="alert3">
+    <ion-alert
+      trigger="alert3"
+      message="Essa fase ainda está em desenvolvimento.
+           Click no planeta Terra."
+    ></ion-alert>
+  </ion-button>
+  <ion-button id="alert4">
+    <ion-alert
+      trigger="alert4"
+      message="Essa fase ainda está em desenvolvimento.
+           Click no planeta Terra."
+    ></ion-alert>
+  </ion-button>
+  <ion-button id="alert5">
+    <ion-alert
+      trigger="alert5"
+      message="Essa fase ainda está em desenvolvimento.
+           Click no planeta Terra."
+    ></ion-alert>
+  </ion-button>
   <ion-button href="/level-selection" id="earth">
-    <ion-img src="../../../assets/Planets/Earth.png" ></ion-img>
+    <ion-img src="../../../assets/Planets/Earth.png"></ion-img>
   </ion-button>
 </ion-content>
