--- a/src/app/pages/moon-scenery/moon-scenery.page.html
+++ b/src/app/pages/moon-scenery/moon-scenery.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <app-choices
+  <app-choices
   [escolha1]="'1'"
   [escolha2]="'2'"
   [escolha3]="'3'"
@@ -7,7 +7,43 @@
   [pergunta]="'Qual é o número primo?'"
   [respostaCorreta]="'B'"
   [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
-    ></app-choices>
+  ></app-choices>
+  <app-choices
+  [escolha1]="'1'"
+  [escolha2]="'2'"
+  [escolha3]="'3'"
+  [escolha4]="'4'"
+  [pergunta]="'Qual é o número primo?'"
+  [respostaCorreta]="'B'"
+  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
+  ></app-choices>
+  <app-choices
+  [escolha1]="'1'"
+  [escolha2]="'2'"
+  [escolha3]="'3'"
+  [escolha4]="'4'"
+  [pergunta]="'Qual é o número primo?'"
+  [respostaCorreta]="'B'"
+  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
+  ></app-choices>
+  <app-choices
+  [escolha1]="'1'"
+  [escolha2]="'2'"
+  [escolha3]="'3'"
+  [escolha4]="'4'"
+  [pergunta]="'Qual é o número primo?'"
+  [respostaCorreta]="'B'"
+  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
+  ></app-choices>
+  <app-choices
+  [escolha1]="'1'"
+  [escolha2]="'2'"
+  [escolha3]="'3'"
+  [escolha4]="'4'"
+  [pergunta]="'Qual é o número primo?'"
+  [respostaCorreta]="'B'"
+  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
+  ></app-choices>
   <app-book></app-book>
   <app-settings></app-settings>
   <app-interaction
