Função Pontuação e Estrelas mostradas na tela

--- a/src/app/component/conclusion/conclusion.component.html
+++ b/src/app/component/conclusion/conclusion.component.html
@@ -1,2 +1,6 @@
-<p>
-</p>
+<ion-content class="conclusion-container">
+    <div class="conclusion-container">
+      <h2>Pontuação: {{ pontuacao }}</h2>
+      <h2>Estrelas: {{ estrelas }}</h2>
+    </div>
+</ion-content>
