--- a/src/app/pages/moon-scenery/moon-scenery.page.html
+++ b/src/app/pages/moon-scenery/moon-scenery.page.html
@@ -46,6 +46,7 @@
   ></app-choices>
   <app-book></app-book>
   <app-settings></app-settings>
+  <app-conclusion></app-conclusion>
   <app-interaction
   [message]="'Tchau mundo'"
   [image]="'../../../assets/Reactions/interaction1.png'"
