--- a/src/app/pages/moon-scenery/moon-scenery.page.html
+++ b/src/app/pages/moon-scenery/moon-scenery.page.html
@@ -9,44 +9,44 @@
   [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
   ></app-choices>
   <app-choices
-  [escolha1]="'1'"
-  [escolha2]="'2'"
-  [escolha3]="'3'"
-  [escolha4]="'4'"
-  [pergunta]="'Qual é o número primo?'"
-  [respostaCorreta]="'B'"
-  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
-  ></app-choices>
-  <app-choices
-  [escolha1]="'1'"
-  [escolha2]="'2'"
-  [escolha3]="'3'"
-  [escolha4]="'4'"
-  [pergunta]="'Qual é o número primo?'"
-  [respostaCorreta]="'B'"
-  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
-  ></app-choices>
-  <app-choices
-  [escolha1]="'1'"
-  [escolha2]="'2'"
-  [escolha3]="'3'"
-  [escolha4]="'4'"
-  [pergunta]="'Qual é o número primo?'"
-  [respostaCorreta]="'B'"
-  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
-  ></app-choices>
-  <app-choices
-  [escolha1]="'1'"
-  [escolha2]="'2'"
-  [escolha3]="'3'"
-  [escolha4]="'4'"
-  [pergunta]="'Qual é o número primo?'"
-  [respostaCorreta]="'B'"
-  [explicacao]="'Porque os números 1, 3 e 4 não são primos'"
-  ></app-choices>
+  [escolha1]="'Moon'"
+  [escolha2]="'Sun'"
+  [escolha3]="'Marth'"
+  [escolha4]="'Earth'"
+  [pergunta]="'Qual é o nome da lua em inglês?'"
+  [respostaCorreta]="'A'"
+  [explicacao]="'moon significa lua.'"
+></app-choices>
+<app-choices
+  [escolha1]="'Moon'"
+  [escolha2]="'Solar'"
+  [escolha3]="'Sun'"
+  [escolha4]="'Earth'"
+  [pergunta]="'Qual é a forma correta de falar sol em inglês?'"
+  [respostaCorreta]="'C'"
+  [explicacao]="'sun significa sol.'"
+></app-choices>
+<app-choices
+  [escolha1]="'Paris'"
+  [escolha2]="'Berlin'"
+  [escolha3]="'Roma'"
+  [escolha4]="'Londres'"
+  [pergunta]="'Qual é a capital da França?'"
+  [respostaCorreta]="'A'"
+  [explicacao]="'Paris é a capital da França.'"
+></app-choices>
+<app-choices
+  [escolha1]="'200'"
+  [escolha2]="'150'"
+  [escolha3]="'100'"
+  [escolha4]="'50'"
+  [pergunta]="'Quantos anos tem um bicentenário?'"
+  [respostaCorreta]="'A'"
+  [explicacao]="'Um bicentenário tem 200 anos.'"
+></app-choices>
   <app-book></app-book>
   <app-settings></app-settings>
-  <app-conclusion></app-conclusion>
+  <app-conclusion *ngIf="todasPerguntasRespondidas()"></app-conclusion>
   <app-interaction
   [message]="'Tchau mundo'"
   [image]="'../../../assets/Reactions/interaction1.png'"
