--- a/src/app/pages/moon-scenery/moon-scenery.page.scss
+++ b/src/app/pages/moon-scenery/moon-scenery.page.scss
@@ -1,6 +1,7 @@
- ion-content::part(background){
-     background-image: url('../../../assets/scenerys/CenarioLua.jpg');
-     background-size: cover;
-     width: 100vw;
-     height: 100vh;
-   }
+* {
+  margin: 0;
+  padding: 0;
+}
+ion-content::part(background){
+    background: #ffffff00;
+  }
