--- a/src/app/pages/pirates-scenery/pirates-scenery.page.scss
+++ b/src/app/pages/pirates-scenery/pirates-scenery.page.scss
@@ -1,6 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 ion-content::part(background){
-/*     background-image: url('../../../assets/scenerys/'); falta a imagem
- */    background-size: cover;
-    width: 100vw;
-    height: 100vh;
+    background: #ffffff00;
   }
