Puxar components finalizado

--- a/src/app/pages/moon-scenery/moon-scenery.page.html
+++ b/src/app/pages/moon-scenery/moon-scenery.page.html
@@ -47,41 +47,88 @@
   <app-book></app-book>
   <app-settings></app-settings>
   <app-conclusion *ngIf="todasPerguntasRespondidas()"></app-conclusion>
-  <app-interaction
-  [message]="'Tchau mundo'"
-  [image]="'../../../assets/Reactions/interaction1.png'"
-  ></app-interaction>
-  <app-interaction
-  [message]="'Olá mundo'"
-  [image]="'../../../assets/Reactions/interaction2.png'"
-  ></app-interaction>
-  <app-interaction
-  [message]="'Tchau mundo'"
-  [image]="'../../../assets/Reactions/interaction3.png'"
-  ></app-interaction>
-  <app-interaction
-  [message]="'Olá mundo'"
-  [image]="'../../../assets/Reactions/interaction4.png'"
-  ></app-interaction>
-  <!-- <app-choices
-  [escolha1]="'Moon'"
-  [escolha2]="'Sun'"
-  [escolha3]="'Marth'"
-  [escolha4]="'Earth'"
-  [pergunta]="'Qual é o nome da lua em inglês?'"
-  [respostaCorreta]="'A'"
-  [explicacao]="'moon significa lua.'"
-  ></app-choices>
-  <app-choices
-  [escolha1]="'Moon'"
-  [escolha2]="'Solar'"
-  [escolha3]="'Sun'"
-  [escolha4]="'Earth'"
-  [pergunta]="'Qual é a forma correta de falar sol em inglês ?'"
-  [respostaCorreta]="'C'"
-  [explicacao]="'sun significa sol.'"
-  ></app-choices> -->
 </ion-content>
 
 
+<!-- codigo certo botar ao fim -->
 
+<!-- <ion-content>
+  <app-interaction
+    [style.display]="interactionVisible1 ? 'flex' : 'none'"
+    [message]="'Tchau mundo'"
+    [image]="'../../../assets/Reactions/interaction1.png'"
+  ></app-interaction>
+  <app-interaction
+    [style.display]="interactionVisible2 ? 'flex' : 'none'"
+    [message]="'Tchau mundo'"
+    [image]="'../../../assets/Reactions/interaction1.png'"
+  ></app-interaction>
+  <app-interaction
+    [style.display]="interactionVisible3 ? 'flex' : 'none'"
+    [message]="'Tchau mundo'"
+    [image]="'../../../assets/Reactions/interaction2.png'"
+  ></app-interaction>
+  <app-interaction
+    [style.display]="interactionVisible4 ? 'flex' : 'none'"
+    [message]="'Tchau mundo'"
+    [image]="'../../../assets/Reactions/interaction3.png'"
+  ></app-interaction>
+  <app-interaction
+    [style.display]="interactionVisible5 ? 'flex' : 'none'"
+    [message]="'Tchau mundo'"
+    [image]="'../../../assets/Reactions/interaction4.png'"
+  ></app-interaction>
+  <app-choices
+    [style.display]="choicesVisible1 ? 'flex' : 'none'"
+    [escolha1]="'200'"
+    [escolha2]="'150'"
+    [escolha3]="'100'"
+    [escolha4]="'50'"
+    [pergunta]="'Quantos anos tem um bicentenário?'"
+    [respostaCorreta]="'A'"
+    [explicacao]="'Um bicentenário tem 200 anos.'"
+  ></app-choices>
+  <app-choices
+    [style.display]="choicesVisible2 ? 'flex' : 'none'"
+    [escolha1]="'200'"
+    [escolha2]="'150'"
+    [escolha3]="'100'"
+    [escolha4]="'50'"
+    [pergunta]="'Quantos anos tem um bicentenário?'"
+    [respostaCorreta]="'A'"
+    [explicacao]="'Um bicentenário tem 200 anos.'"
+  ></app-choices>
+  <app-choices
+    [style.display]="choicesVisible3 ? 'flex' : 'none'"
+    [escolha1]="'200'"
+    [escolha2]="'150'"
+    [escolha3]="'100'"
+    [escolha4]="'50'"
+    [pergunta]="'Quantos anos tem um bicentenário?'"
+    [respostaCorreta]="'A'"
+    [explicacao]="'Um bicentenário tem 200 anos.'"
+  ></app-choices>
+  <app-choices
+    [style.display]="choicesVisible4 ? 'flex' : 'none'"
+    [escolha1]="'200'"
+    [escolha2]="'150'"
+    [escolha3]="'100'"
+    [escolha4]="'50'"
+    [pergunta]="'Quantos anos tem um bicentenário?'"
+    [respostaCorreta]="'A'"
+    [explicacao]="'Um bicentenário tem 200 anos.'"
+  ></app-choices>
+  <app-choices
+    [style.display]="choicesVisible5 ? 'flex' : 'none'"
+    [escolha1]="'200'"
+    [escolha2]="'150'"
+    [escolha3]="'100'"
+    [escolha4]="'50'"
+    [pergunta]="'Quantos anos tem um bicentenário?'"
+    [respostaCorreta]="'A'"
+    [explicacao]="'Um bicentenário tem 200 anos.'"
+  ></app-choices>
+  <app-book></app-book>
+  <app-settings></app-settings>
+</ion-content>
+ -->
