--- a/src/app/component/interaction/interaction.component.scss
+++ b/src/app/component/interaction/interaction.component.scss
@@ -3,6 +3,10 @@
     margin: 0;
     box-sizing: border-box;
   }
+
+  .hidden {
+    display: none;
+  }
   
   #container{
     position: absolute;
