--- a/src/app/component/conclusion/conclusion.component.scss
+++ b/src/app/component/conclusion/conclusion.component.scss
@@ -1,14 +1,172 @@
-.conclusion-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 300px;
-    height: 300px;
-    h2 {
-      font-size: 24px;
-      margin-bottom: 10px;
-      color: #333; /* Cor do texto */
+
+ion-content {
+  position: relative;
+  left: 0vw;
+  top: 22vh;
+  --background: center /100% 100% no-repeat url('../../../assets/conclusionAssets/FULL-BG.png');
+  width: 340px;
+  height: 343px;
+}
+
+@media screen and (min-width: 360px) {
+  ion-content {
+    position: relative;
+    left: 2vw;
+    top: 22vh;
+    width: 350px;
+    height: 353px;
+  }
+}
+
+@media screen and (min-width: 400px) {
+  ion-content {
+    position: relative;
+    left: 2vw;
+    top: 20vh;
+    width: 390px;
+    height: 393px;
+  }
+}
+
+
+ion-content ion-toolbar {
+  --color: white;
+  text-align: center;
+  --background: transparent;
+  text-transform: uppercase;
+  font-family: fantasy, cursive, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bolder;
+  color: #232125;
+  position: fixed;
+  top: 28vh;
+  left: 2vw;
+
+  ion-title {
+    font-size: x-large;
+    letter-spacing: 0.25em;
+  }
+}
+
+
+@media screen and (min-width: 360px) {
+  ion-content ion-toolbar {
+    top: 28vh;
+    left: 2vw;
+
+    ion-title {
+      font-size: 22px;
+      letter-spacing: 0.25em;
     }
   }
+}
+
+@media screen and (min-width: 400px) {
+  ion-content ion-toolbar {
+    top: 27.5vh;
+    left: 2vw;
+
+    ion-title {
+      font-size: 28px;
+      letter-spacing: 0.25em;
+    }
+  }
+}
+
+#pontuacao {
+  position: fixed;
+  top: 51vh;
+  left: 38vw;
+  font-size: 16px;
+  letter-spacing: 0.25em;
+}
+
+
+@media screen and (min-width: 360px) {
+  #pontuacao {
+    position: fixed;
+    top: 52vh;
+    left: 36vw;
+    font-size: 18px;
+    letter-spacing: 0.25em;
+  }
+
+}
+
+@media screen and (min-width: 400px) {
+  #pontuacao {
+    position: fixed;
+    top: 53vh;
+    left: 37vw;
+    font-size: 20px;
+    letter-spacing: 0.25em;
+  }
+}
+
+.estrelas{
+  width: 340px;
+  display: flex;
+  justify-content: center;
+}
+
+.estrela1{
+  position: absolute;
+  width: 340px;
+}
+
+.estrela2{
+  position: absolute;
+  width: 340px;
+}
+
+.estrela3{
+  position: absolute;
+  width: 340px;
+}
+
+
+@media screen and (min-width: 360px) {
+.estrelas{
+  width: 350px;
+  display: flex;
+  justify-content: center;
+}
+
+.estrela1{
+  position: absolute;
+  width: 350px;
+}
+
+.estrela2{
+  position: absolute;
+  width: 350px;
+}
+
+.estrela3{
+  position: absolute;
+  width: 350px;
+}
+}
+
+@media screen and (min-width: 400px) {
+.estrelas{
+  width: 390px;
+  display: flex;
+  justify-content: center;
+}
+
+.estrela1{
+  position: absolute;
+  width: 390px;
+}
+
+.estrela2{
+  position: absolute;
+  width: 390px;
+}
+
+.estrela3{
+  position: absolute;
+  width: 390px;
+}
+
+}
